yaml/mariadb-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: mariadb
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deploymentconfig: mariadb
    spec:
      containers:
      - args:
        - --character-set-server=utf8
        image: mariadb
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 15
          tcpSocket:
            port: 3306
          timeoutSeconds: 1
        name: mariadb
        ports:
        - containerPort: 3306
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mariadb-storage
        persistentVolumeClaim:
          claimName: mariadb
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - mariadb
      from:
        kind: ImageStreamTag
        name: mariadb:10.4
    type: ImageChange
