yaml/openemr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: openemr-certs
  creationTimestamp: null
  labels:
  labels:
    app: openemr
  name: openemr
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    deploymentconfig: openemr
  sessionAffinity: None
  type: ClusterIP
